--- a/index.html
+++ b/index.html
@@ -35,92 +35,58 @@
   <!-- Add this inside the <body> tag -->
 <section id="landing">
     <div class="background-image"></div>
-    <h1 class="outlined-text">Your Name</h1>
+    <h1 class="outlined-text">JENNIFER OSUNDE</h1>
 
         <!-- Wrap your tagline with this class -->
-<h2 class="tagline">Where Technology Meets Creativity: Innovating for a Better Tomorrow.</h2>
-    <div class="scroll-down-indicator"></div>
+<h2 class="tagline">Technology Meets Creativity: Innovating for a Better Tomorrow.</h2>
   </section>
-<!-- Add this between any two sections -->
-<hr>
+
   <!-- Add this below the landing section -->
 <section id="about-me" alt="About Me">
     <img src="My_Award_2.jpg" alt="HI ^_^"> <!-- Replace with your photo -->
-    <p>Your Short Bio</p>
-    <!-- Add clickable icons for email, LinkedIn, GitHub -->
-  </section>
+<!-- Bio Section -->
+<section id="bio">
+  <h2>My Bio</h2> <!-- Title for the bio section -->
+  <p>I am a passionate Software Developer with a flair for creative problem-solving. With a background in both tech and design, I bring a unique blend of skills to any project :)
+    I am dedicated to pushing the boundaries of what's possible in tech. With a strong foundation in data anayltics and accessability needs, I aim to create solutions that are both innovative and user-friendly.
+    With a knack for coding and a love for design, I strive to create digital experiences that are engaging, intuitive, and impactful. </p></p>
+</section>
 
+     
 
-<!-- Add this below the About Me section -->
-<section id="skills">
-    <!-- Placeholder for interactive skill bars or pie charts -->
-    <!-- Modify the Skills section -->
-    <div class="skill"><i class="fas fa-code"></i> Python</div>
-    <div class="skill">Teamwork</div>
-    <!-- Add more skills here -->
-  </section>
-
-  <!-- Add this below the Skills section -->
-
-  <section id="experience">
-    <div class="job" onclick="toggleJobDetails('job1-details'); addSparkle(event);">
-      Software Developer at XYZ Corp
-    </div>
-    <div id="job1-details" class="job-details" style="display:none;">
-      Details about this job
-    </div>
-    <!-- Add more jobs here -->
-  </section>
+<!-- Start of the Resume Section -->
+<section id="resume-section">
   
-  </section>
-  <!-- Add this below the Experience section -->
-<section id="education">
-    <!-- Placeholder for educational details -->
-    <div class="degree">Bachelor's in Computer Science</div>
-    <div class="degree">Certification in Web Development</div>
-    <!-- Add more degrees or certifications here -->
-  </section>
-  <!-- Add this below the Education section -->
-<section id="portfolio">
-    <!-- Placeholder for portfolio projects -->
-    <div class="project">Project 1</div>
-    <div class="project">Project 2</div>
-    <!-- Add more projects here -->
-  </section>
-  <!-- Add this below the Portfolio section -->
-<section id="testimonials">
-    <!-- Placeholder for testimonials -->
-    <div class="testimonial">"Great team player!" - Manager</div>
-    <div class="testimonial">"Excellent coder!" - Colleague</div>
-    <!-- Add more testimonials here -->
-  </section>
+  <!-- Title for the Resume Section -->
+  <h2>My Resumé</h2>
 
-  <!-- Add this below the Testimonials section -->
-  <!-- Modify the Contact Form section -->
-<section id="contact">
-    <form action="https://formspree.io/your-email" method="POST">
-      <input type="text" name="name" placeholder="Your Name">
-      <input type="email" name="_replyto" placeholder="Your Email">
-      <textarea name="message" placeholder="Your Message"></textarea>
-      <button type="submit">Send</button>
-    </form>
-  </section>
+  <!-- Embedding the PDF file using iframe -->
+  <!-- src: Specifies the path to your PDF file -->
+  <!-- width & height: Sets the dimensions of the iframe -->
+  <iframe src="Resume.pdf" width="1100px" height="1000px"></iframe>
   
+</section>
+<!-- End of the Resume Section -->
+
+  
+<!-- Contact Section -->
 <section id="contact">
-    <form>
-      <input type="text" placeholder="Your Name">
-      <input type="email" placeholder="Your Email">
-      <textarea placeholder="Your Message"></textarea>
-      <button type="submit">Send</button>
-    </form>
-  </section>
+  <h2><i class="fas fa-mobile-alt"></i> Contact Me</h2> <!-- Title with smartphone icon -->
+  <form action="https://formspree.io/your-email" method="POST">
+    <input type="text" name="name" placeholder="Your Name">
+    <input type="email" name="_replyto" placeholder="Your Email">
+    <textarea name="message" placeholder="Your Message"></textarea>
+    <button type="submit">Send</button>
+  </form>
+</section>
+
 
   <!-- Add this below the Contact Form section -->
 <footer>
     <!-- Placeholder for social media links and downloadable PDF resume -->
-    <a href="your-linkedin-url">LinkedIn</a>
-    <a href="your-github-url">GitHub</a>
-    <a href="your-resume.pdf">Download Resume</a>
+    
+    <a href="https://github.com/PerfectionInHumanForm">GitHub</a>
+    <a href="Resume.pdf">Download Resume</a>
   </footer>
   
 </body>
